Fixes spacing bugs on homepage

--- a/anaisdawes/src/CSS/Home.css
+++ b/anaisdawes/src/CSS/Home.css
@@ -20,6 +20,7 @@ html, body {
     background-color: #567D91;
     padding-bottom: 1.48rem;
     box-shadow: 0px 2px 7px 2px #9b9fa1;
+    overflow: hidden;
 }
 
 .introBackgroundText {
@@ -85,10 +86,11 @@ html, body {
 }
 
 .projectsGrid {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    align-items: center;
+    display: grid;
+    width: 80%;
+    gap: 1.5rem;
+    grid-template-columns: repeat(auto-fill, minmax(18rem, 1fr));
+    justify-items: center;
     margin: 1.48rem;
     margin-bottom: 0rem;
 }
